tests/errors/macro/parser_unexpected_endw.c
int a = 1;
#endw a = 0;

int main()
{
	assert(a, "recovery is not working");
	return 0;
}
